# katepeh

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  enums.py  errors.py  middleware.py  models.py  validators.py
backend/app/ml/models/: document_analyzer.py  information_extractor.py  ocr_processor.py
backend/app/ml/preprocessors/: image_preprocessor.py
backend/tests/: test_errors.py  test_image_preprocessor.py  test_middleware.py  test_validators.py
description/: project-description.json
frontend/: package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  ImageUpload.tsx  KTPDisplay.tsx  Loading.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  ImageUpload.test.tsx  KTPDisplay.test.tsx  Loading.test.tsx
frontend/src/test/: setup.ts
frontend/src/types/: ktp.ts
